# MVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: 123.vsm  123f.msm  HelloWorld.msm  HelloWorld_manual.msm  HelloWorld_str.msm  alloc.msm  bits.msm  eulersNum.msm  fib.vsm  fibonacci.msm  grayCode.msm  helloworld.msm  helloworldMem.msm  lerp.msm  memory.msm  piNum.msm  read.msm  rot13.msm  stdlib.mlb  truth.msm
msmlib/: stdlib.mlb
src/: nanlib.h  shared.h
src/asms/: asmsc.c
src/demasm/: demasm.c
src/desasm/: desasm.c
src/devasm/: devasm.c
src/diasms/: diasms.c
src/masm/: masm.c
src/mvm/: mvm.c
src/sasm/: sasmc.c
src/svm/: svm.c
src/vasm/: vasm.c
